[gd_scene load_steps=43 format=3 uid="uid://dg0r5fayn2wmb"]

[ext_resource type="FontFile" uid="uid://bl0f2csh2wd2l" path="res://assets/fonts/DungeonFont.ttf" id="1_65ovy"]
[ext_resource type="Script" uid="uid://csep6w854tav" path="res://scripts/arcade.gd" id="1_myokn"]
[ext_resource type="FontFile" uid="uid://dalt11g8b1g2k" path="res://assets/fonts/Kitchen Sink.ttf" id="2_mddpw"]
[ext_resource type="Texture2D" uid="uid://8r6702a8yda4" path="res://assets/sprites/back.png" id="3_ws72e"]
[ext_resource type="Texture2D" uid="uid://co77hc7k66ah5" path="res://assets/sprites/c1_normal.png" id="4_a2v1g"]
[ext_resource type="Texture2D" uid="uid://drak28auqno4t" path="res://assets/sprites/c2_normal.png" id="5_a81o0"]
[ext_resource type="Texture2D" uid="uid://bhljkb51mn0of" path="res://assets/sprites/c3_normal.png" id="6_8dkgp"]
[ext_resource type="Texture2D" uid="uid://c7ub8fs3lrivp" path="res://assets/sprites/c4_normal.png" id="7_k3yxw"]
[ext_resource type="Texture2D" uid="uid://dhxet74lst4h8" path="res://assets/sprites/c5_normal.png" id="8_lor7r"]
[ext_resource type="Texture2D" uid="uid://d0mmrbctam71x" path="res://assets/sprites/items.png" id="10_1tl4h"]
[ext_resource type="PackedScene" uid="uid://d2k88f0184l1r" path="res://scenes/shop_item.tscn" id="12_j55ey"]

[sub_resource type="LabelSettings" id="LabelSettings_5pu76"]
font = ExtResource("1_65ovy")
font_size = 72

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uj0xp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_82fw7"]
content_margin_left = 12.0
content_margin_top = 12.0
content_margin_right = 12.0
content_margin_bottom = 12.0
bg_color = Color(0.294028, 0.294028, 0.294028, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7bh5y"]
content_margin_left = 12.0
content_margin_top = 12.0
content_margin_right = 12.0
content_margin_bottom = 12.0
bg_color = Color(0.589096, 0.589096, 0.589095, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m5x1s"]
content_margin_left = 12.0
content_margin_top = 12.0
content_margin_right = 12.0
content_margin_bottom = 12.0
bg_color = Color(0.261113, 0.261113, 0.261113, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f1llh"]
content_margin_left = 12.0
content_margin_top = 12.0
content_margin_right = 12.0
content_margin_bottom = 12.0
bg_color = Color(0.0430392, 0.0430392, 0.0430392, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ijo5e"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)

[sub_resource type="AnimatedTexture" id="AnimatedTexture_htqcg"]
frames = 5
frame_0/texture = ExtResource("4_a2v1g")
frame_0/duration = 0.25
frame_1/texture = ExtResource("5_a81o0")
frame_1/duration = 0.25
frame_2/texture = ExtResource("6_8dkgp")
frame_2/duration = 0.25
frame_3/texture = ExtResource("7_k3yxw")
frame_3/duration = 0.25
frame_4/texture = ExtResource("8_lor7r")
frame_4/duration = 0.25

[sub_resource type="LabelSettings" id="LabelSettings_nr1y4"]
line_spacing = 14.0
font = ExtResource("2_mddpw")
font_size = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ojqbj"]
bg_color = Color(0.162066, 0.162066, 0.162065, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kmoa2"]
bg_color = Color(0.389863, 0.830616, 0.949648, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ulk6b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e3e5b"]
content_margin_left = 6.0
content_margin_top = 0.0
content_margin_right = 6.0
bg_color = Color(0.262932, 0.262932, 0.262932, 1)
border_color = Color(1, 1, 1, 1)
expand_margin_left = 4.0
expand_margin_right = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rqsne"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sr3hg"]
content_margin_left = 10.0
content_margin_top = 12.0
content_margin_right = 10.0
content_margin_bottom = 4.0
bg_color = Color(0.0768358, 0.0768358, 0.0768358, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_color = Color(1, 1, 1, 1)
expand_margin_left = 4.0
expand_margin_right = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ww5kl"]
content_margin_left = 10.0
content_margin_top = 12.0
content_margin_right = 10.0
content_margin_bottom = 4.0
bg_color = Color(0.188969, 0.188969, 0.188969, 1)
border_color = Color(1, 1, 1, 1)
expand_margin_left = 8.0
expand_margin_right = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e0ri7"]
content_margin_left = 10.0
content_margin_top = 12.0
content_margin_right = 10.0
content_margin_bottom = 4.0
bg_color = Color(0.0768358, 0.0768358, 0.0768358, 1)
border_color = Color(1, 1, 1, 1)
expand_margin_left = 8.0
expand_margin_right = 8.0

[sub_resource type="LabelSettings" id="LabelSettings_5uhcu"]
font = ExtResource("2_mddpw")
font_size = 26
font_color = Color(0.643981, 0.643981, 0.643981, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xvjr7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7rgwp"]
bg_color = Color(0.294028, 0.294028, 0.294028, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vg77v"]
bg_color = Color(0.589096, 0.589096, 0.589095, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_heqtt"]
bg_color = Color(0.261113, 0.261113, 0.261113, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hh4at"]
bg_color = Color(0.0430392, 0.0430392, 0.0430392, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_1e6db"]
atlas = ExtResource("10_1tl4h")
region = Rect2(0, 0, 16, 16)

[sub_resource type="LabelSettings" id="LabelSettings_5va7a"]
font = ExtResource("1_65ovy")
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_d2jn0"]
font = ExtResource("2_mddpw")
font_size = 24

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s74ww"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tydx4"]
bg_color = Color(0.294028, 0.294028, 0.294028, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lr577"]
bg_color = Color(0.589096, 0.589096, 0.589095, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ql036"]
bg_color = Color(0.261113, 0.261113, 0.261113, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w026t"]
bg_color = Color(0.0430392, 0.0430392, 0.0430392, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)

[node name="Arcade" type="Node2D"]
script = ExtResource("1_myokn")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Main" type="Control" parent="UI"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="UI/Main"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.061
anchor_right = 0.5
anchor_bottom = 0.061
offset_left = -360.0
offset_top = -13.08
offset_right = 360.0
offset_bottom = 59.92
grow_horizontal = 2
text = "Myrkwood"
label_settings = SubResource("LabelSettings_5pu76")
horizontal_alignment = 1

[node name="Back" type="Button" parent="UI/Main"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.083
anchor_top = 0.06
anchor_right = 0.083
anchor_bottom = 0.06
offset_left = -35.76
offset_top = -5.8
offset_right = 36.24
offset_bottom = 54.2
theme_override_fonts/font = ExtResource("2_mddpw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_uj0xp")
theme_override_styles/disabled = SubResource("StyleBoxFlat_82fw7")
theme_override_styles/hover = SubResource("StyleBoxFlat_7bh5y")
theme_override_styles/pressed = SubResource("StyleBoxFlat_m5x1s")
theme_override_styles/normal = SubResource("StyleBoxFlat_f1llh")
icon = ExtResource("3_ws72e")
icon_alignment = 1
expand_icon = true

[node name="Panel" type="Panel" parent="UI/Main"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.033
anchor_top = 0.112
anchor_right = 0.967
anchor_bottom = 0.394
offset_left = 0.24
offset_top = 0.639999
offset_right = -0.240051
offset_bottom = 23.68
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ijo5e")

[node name="TextureRect" type="TextureRect" parent="UI/Main"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.237
anchor_right = 0.5
anchor_bottom = 0.237
offset_left = -296.0
offset_top = -106.88
offset_right = -168.0
offset_bottom = 149.12
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AnimatedTexture_htqcg")

[node name="Meta" type="Label" parent="UI/Main"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.237
anchor_right = 0.5
anchor_bottom = 0.237
offset_left = -150.0
offset_top = -120.88
offset_right = 306.0
offset_bottom = 187.12
grow_horizontal = 2
grow_vertical = 2
text = "Level: 
Health: 0
Attack: 0
Defense: 0
Intelligence: 0
Gold: 0
KP: 0"
label_settings = SubResource("LabelSettings_nr1y4")
vertical_alignment = 1
autowrap_mode = 2

[node name="Level" type="HBoxContainer" parent="UI/Main"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.237
anchor_right = 0.5
anchor_bottom = 0.237
offset_left = 26.0
offset_top = -120.36
offset_right = 262.0
offset_bottom = -88.36
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="UI/Main/Level"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_nr1y4")

[node name="ProgressBar" type="ProgressBar" parent="UI/Main/Level"]
custom_minimum_size = Vector2(200, 32)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/background = SubResource("StyleBoxFlat_ojqbj")
theme_override_styles/fill = SubResource("StyleBoxFlat_kmoa2")
value = 10.0
show_percentage = false

[node name="TabContainer" type="TabContainer" parent="UI/Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -336.0
offset_top = -96.0
offset_right = 336.0
offset_bottom = 608.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/side_margin = 8
theme_override_fonts/font = ExtResource("2_mddpw")
theme_override_font_sizes/font_size = 22
theme_override_styles/tab_focus = SubResource("StyleBoxEmpty_ulk6b")
theme_override_styles/tab_disabled = SubResource("StyleBoxFlat_e3e5b")
theme_override_styles/panel = SubResource("StyleBoxFlat_rqsne")
theme_override_styles/tab_selected = SubResource("StyleBoxFlat_sr3hg")
theme_override_styles/tab_hovered = SubResource("StyleBoxFlat_ww5kl")
theme_override_styles/tab_unselected = SubResource("StyleBoxFlat_e0ri7")
tab_alignment = 1
current_tab = 0

[node name="Levels" type="Control" parent="UI/Main/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="ScrollContainer" type="ScrollContainer" parent="UI/Main/TabContainer/Levels"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.024
anchor_top = 0.023
anchor_right = 0.976
anchor_bottom = 0.978
offset_left = 0.256
offset_top = 0.600998
offset_right = -0.256042
offset_bottom = 0.685974
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Main/TabContainer/Levels/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 16
alignment = 1

[node name="Seed" type="Label" parent="UI/Main/TabContainer/Levels"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -312.0
offset_top = -40.0
offset_right = 320.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
text = "This is a seed"
label_settings = SubResource("LabelSettings_5uhcu")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Loadout" type="Control" parent="UI/Main/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Weapon" type="Button" parent="UI/Main/TabContainer/Loadout"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -312.0
offset_top = -299.5
offset_right = 312.0
offset_bottom = -111.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_xvjr7")
theme_override_styles/disabled = SubResource("StyleBoxFlat_7rgwp")
theme_override_styles/hover = SubResource("StyleBoxFlat_vg77v")
theme_override_styles/pressed = SubResource("StyleBoxFlat_heqtt")
theme_override_styles/normal = SubResource("StyleBoxFlat_hh4at")

[node name="TextureRect" type="TextureRect" parent="UI/Main/TabContainer/Loadout/Weapon"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 24.0
offset_top = -64.0
offset_right = 160.0
offset_bottom = 64.0
grow_vertical = 2
texture = SubResource("AtlasTexture_1e6db")
expand_mode = 2

[node name="Name" type="Label" parent="UI/Main/TabContainer/Loadout/Weapon"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.0
offset_top = -79.0
offset_right = 281.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 2
text = "Wooden Sword"
label_settings = SubResource("LabelSettings_5va7a")

[node name="Description" type="Label" parent="UI/Main/TabContainer/Loadout/Weapon"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -16.0
offset_right = 288.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
text = "A quick brown fox jumped over the lazy dog."
label_settings = SubResource("LabelSettings_d2jn0")
autowrap_mode = 2

[node name="Armor" type="Button" parent="UI/Main/TabContainer/Loadout"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -312.0
offset_top = -99.5
offset_right = 312.0
offset_bottom = 88.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_xvjr7")
theme_override_styles/disabled = SubResource("StyleBoxFlat_7rgwp")
theme_override_styles/hover = SubResource("StyleBoxFlat_vg77v")
theme_override_styles/pressed = SubResource("StyleBoxFlat_heqtt")
theme_override_styles/normal = SubResource("StyleBoxFlat_hh4at")

[node name="TextureRect" type="TextureRect" parent="UI/Main/TabContainer/Loadout/Armor"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 24.0
offset_top = -64.0
offset_right = 160.0
offset_bottom = 64.0
grow_vertical = 2
texture = SubResource("AtlasTexture_1e6db")
expand_mode = 2

[node name="Name" type="Label" parent="UI/Main/TabContainer/Loadout/Armor"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.0
offset_top = -73.0
offset_right = 281.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 2
text = "Wooden Sword"
label_settings = SubResource("LabelSettings_5va7a")

[node name="Description" type="Label" parent="UI/Main/TabContainer/Loadout/Armor"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -16.0
offset_right = 288.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
text = "A quick brown fox jumped over the lazy dog."
label_settings = SubResource("LabelSettings_d2jn0")
autowrap_mode = 2

[node name="Options" type="Control" parent="UI/Main/TabContainer/Loadout"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackButton" type="Button" parent="UI/Main/TabContainer/Loadout/Options"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -312.0
offset_top = 16.0
offset_right = 312.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_mddpw")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_s74ww")
theme_override_styles/disabled = SubResource("StyleBoxFlat_tydx4")
theme_override_styles/hover = SubResource("StyleBoxFlat_lr577")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ql036")
theme_override_styles/normal = SubResource("StyleBoxFlat_w026t")
text = "Go back"

[node name="ScrollContainer" type="ScrollContainer" parent="UI/Main/TabContainer/Loadout/Options"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 96.0
offset_right = -8.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="UI/Main/TabContainer/Loadout/Options/ScrollContainer"]
layout_mode = 2
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 24
columns = 3

[node name="Shop" type="Control" parent="UI/Main/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Main/TabContainer/Shop"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.024
anchor_top = 0.026
anchor_right = 0.976
anchor_bottom = 0.975
offset_left = 0.256
offset_top = 0.125999
offset_right = -0.256042
offset_bottom = 0.224976
theme_override_constants/separation = 24
alignment = 1

[node name="ShopItem" parent="UI/Main/TabContainer/Shop/VBoxContainer" instance=ExtResource("12_j55ey")]
layout_mode = 2

[node name="ShopItem2" parent="UI/Main/TabContainer/Shop/VBoxContainer" instance=ExtResource("12_j55ey")]
layout_mode = 2

[node name="ShopItem3" parent="UI/Main/TabContainer/Shop/VBoxContainer" instance=ExtResource("12_j55ey")]
layout_mode = 2

[connection signal="pressed" from="UI/Main/Back" to="." method="_on_back_pressed"]
[connection signal="tab_selected" from="UI/Main/TabContainer" to="." method="_on_tab_container_tab_selected"]
[connection signal="pressed" from="UI/Main/TabContainer/Loadout/Weapon" to="." method="_on_weapon_pressed"]
[connection signal="pressed" from="UI/Main/TabContainer/Loadout/Armor" to="." method="_on_armor_pressed"]
[connection signal="pressed" from="UI/Main/TabContainer/Loadout/Options/BackButton" to="." method="_on_back_button_pressed"]
